Base de datos con php, descargar oci8 para la implementacion y borrada la carpeta hipoWeb pero se dejo todo en las respectivas carpetas principales

--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" width="device-width,initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-theme.min.css">
-	<title></title>
+	<title>Hipodromo la Rinconada</title>
+	<link rel="stylesheet" type="text/css" href="../css/index_style.css">
 </head>
 <body>
+	<div class="cabecera">
+		<a href="", class="boton_hipodromo">Hipodromo</a>
+		<a href="", class="boton_taquilla">Taquilla</a>
+		<a href="", class="boton_ejemplar">Ejemplares</a>
+		<a href="", class="boton_stud">Studs</a>
+		<a href="", class="boton_restaurante">Restaurantes</a>
+		<a href="", class="boton_carrera">Carreras</a>
+		<a href="", class="boton_registrar">Registrarse</a>
+		<a href="", class="boton_ingresar">Ingresar</a>
+	</div>
 
-	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+	<div class="campo_area">
+		<div class="area_1">	
+			<h1>Texto 1</h1>
+		</div>
+		<div class="area_2">
+			<div class="area_2_1">	
+				<h1>Texto 2</h1>
+			</div>
+
+			<div class="area_2_2">	
+				<h1>Texto 3</h1>
+			</div>
+		</div>
+		<div class="area_3">	
+			<h1>Texto 4</h1>
+		</div>
+	</div>
+
+
+	<footer class="informacion">
+		<a href="", class="info_des">Desarrolladores</a>
+		<a href="", class="info_con">Contactenos</a>
+	</footer>
+
+
+
+
 </body>
 </html>
