--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Hipodromo la Rinconada</title>
-	<link rel="stylesheet" type="text/css" href="../css/index_style.css">
+	<link rel="stylesheet" type="text/css" href="css/index_style.css">
 </head>
 <body>
 	<div class="cabecera">
