El registro casi terminado, el ejemplar solo esta la vista

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 			<li><a class="white" href="#">Studs</a></li>
 			<li><a class="white" href="#">Restaurantes</a></li>
 			<li><a class="white" href="#">Carreras</a></li>
-			<li><a class="white" href="#">Registrarse</a></li>
+			<li class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Iniciar Sesion <span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a href="registro.html">Registrar</a></li>
+					<li><a href="ingresar.html">Iniciar Sesion</a></li>					
+				</ul>
+			</li>
 			<li><a class="white" href="#">Ingresar</a></li>
 		</ul>		
 	</div>
