--- a/ingresar.html
+++ b/ingresar.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 	<div class="cabecera">
-		<a href="", class="boton_hipodromo">Hipodromo</a>
-		
+		<a href="index.html", class="boton_hipodromo">Hipodromo</a>		
 	</div>
 
 	<div class="campo_area ">
