--- a/Eejemplar.html
+++ b/Eejemplar.html
@@ -33,7 +33,7 @@
 
 	<div class="container space">
 		<h3 class="center">Registro del ejemplar</h3>
-		<form class="form-horizontal">
+		<form class="form-horizontal" method="post" action="#">
 			<div class="form-group">
 				<label for="nombre" class="col-sm-3 control-label">Nombre</label>
 				<div class="col-sm-9">
@@ -107,7 +107,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-offset-3 col-sm-9">
-					<button type="submit" class="btn btn-default">Sign in</button>
+					<button type="submit" class="btn btn-default" name="registrar">Registrar</button>
 				</div>
 			</div>
 		</form>
