Ya registra a los usuarios faltan las validaciones

--- a/Eejemplar.html
+++ b/Eejemplar.html
@@ -33,7 +33,7 @@
 
 	<div class="container space">
 		<h3 class="center">Registro del ejemplar</h3>
-		<form class="form-horizontal" method="post" action="#">
+		<form class="form-horizontal" method="post" action="php/Eejemplar.php">
 			<div class="form-group">
 				<label for="nombre" class="col-sm-3 control-label">Nombre</label>
 				<div class="col-sm-9">
