--- a/NOLOBORREN.html
+++ b/NOLOBORREN.html
@@ -10,26 +10,8 @@
 </head>
 <body>
 	<form method="post" action="php/oracledb.php">
-		<!--Name: <input type="text" name="name" placeholder="Name"><br>
-		Last Name: <input type="text" name="lastname" placeholder="Last Name"><br>-->
-		<h1>Registrar</h1>
-			<label> Nombre de Usuario</label>
-			<input type="text" name="usuario" required>
-		    <label id="c1">Nombre:</label>
-			<input title="Se requiere un nombre " type="text" placeholder="" name="nombre" required/>
-			<label> Apellido:</label>
-			<input title="se requiere el apellido" type="text" placeholder="" name="apellido" required/>
-			<label> Contrasena:</label>
-			<input type="password" placeholder="" name="clave" required>			
-			<label>Registrar como</label>
-			<select name="opcion" id="opcion" required>
-				<option value="empty"></option>
-				<option value="propietario">Propietario</option>
-				<option value="entrenador">Entrenador</option>
-				<option value="veterinario">Veterinario</option>
-				<option value="jinete">Jinete</option>
-				<option value="invitado">Invitado</option>
-			</select>
+		Name: <input type="text" name="name" placeholder="Name"><br>
+		Last Name: <input type="text" name="lastname" placeholder="Last Name"><br>
 		<input type="submit" value="click" name="query">	
 	</form>
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
