--- a/Eejemplar.html
+++ b/Eejemplar.html
@@ -10,26 +10,27 @@
 	<link rel="stylesheet" type="text/css" href="css/index_style.css">
 </head>
 <body>
-	<div class="cabecera">
-		<ul class="nav nav-tabs">
-			<li><a class="white" href="index.html">Hipodromo</a></li>
-			<li><a class="white" href="#">Taquilla</a></li>
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">Ejemplar <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="Eejemplar.html">Registrar</a></li>
-					<li><a href="#">Consultar</a></li>
-					<li><a href="#">Modificar</a></li>
-					<li><a href="#">Borrar</a></li>
-				</ul>
-			</li>
-			<li><a class="white" href="#">Studs</a></li>
-			<li><a class="white" href="#">Restaurantes</a></li>
-			<li><a class="white" href="#">Carreras</a></li>
-			<li><a class="white" href="#">Registrarse</a></li>
-			<li><a class="white" href="#">Ingresar</a></li>
-		</ul>
-	</div>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">HR</a>
+	    </div>
+
+	    <div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="index.html">Hipodromo</a></li>		        
+			</ul>	      
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
 
 	<div class="container space">
 		<h3 class="center">Registro del ejemplar</h3>
@@ -54,7 +55,7 @@
 			</div>
 			<div class="form-group">
 				<label for="sexo" class="col-sm-3 control-label">Sexo</label>
-				<div class="col-sm-9">					
+				<div class="col-sm-9">
 					<label class="radio-inline">
 						<input type="radio" name="sexo" value="macho" id="macho" required> Macho							
 					</label>
@@ -78,31 +79,55 @@
 			<div class="form-group">
 				<label for="padre" class="col-sm-3 control-label">Padre del ejemplar</label>
 				<div class="col-sm-9">
-					<input type="text" class="form-control" name="raza" placeholder="Padre">
+					<input type="text" class="form-control" name="padre" placeholder="Padre">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="madre" class="col-sm-3 control-label">Madre del ejemplar</label>
 				<div class="col-sm-9">
-					<input type="text" class="form-control" name="raza" placeholder="Madre">
+					<input type="text" class="form-control" name="madre" placeholder="Madre">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="haras" class="col-sm-3 control-label">Nombre del Haras</label>
 				<div class="col-sm-9">
-					<input type="text" class="form-control" name="raza" placeholder="Nombre del Haras" required>
+					<input type="text" class="form-control" name="haras" placeholder="Nombre del Haras" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="pais" class="col-sm-3 control-label">Pais: </label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" name="pais" placeholder="Pais donde se ubica el haras" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="estado" class="col-sm-3 control-label">Estado: </label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" name="estado" placeholder="Estado donde se ubica el haras" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="municipio" class="col-sm-3 control-label">Municipio: </label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" name="municipio" placeholder="Municipio donde se ubica el haras" required>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="parroquia" class="col-sm-3 control-label">Parroquia: </label>
+				<div class="col-sm-9">
+					<input type="text" class="form-control" name="parroquia" placeholder="Parroquia donde se ubica el haras" required>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="puesto" class="col-sm-3 control-label">Numero de puesto</label>
 				<div class="col-sm-9">
-					<input type="text" class="form-control" name="raza" placeholder="Numero de puesto" required>
+					<input type="text" class="form-control" name="puesto" placeholder="Numero de puesto" required>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="caballeriza" class="col-sm-3 control-label">Numero de la caballeriza</label>
 				<div class="col-sm-9">
-					<input type="text" class="form-control" name="raza" placeholder="Numero de la caballeriza" required>
+					<input type="text" class="form-control" name="caballeriza" placeholder="Numero de la caballeriza" required>
 				</div>
 			</div>
 			<div class="form-group">
@@ -112,11 +137,6 @@
 			</div>
 		</form>
 	</div>
-
-	<footer class="informacion">
-		<a href="", class="info_des">Desarrolladores</a>
-		<a href="", class="info_con">Contactenos</a>
-	</footer>
 
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>	
