--- a/registro.html
+++ b/registro.html
@@ -10,10 +10,27 @@
 	<link rel="stylesheet" type="text/css" href="css/registro.css">	
 </head>
 <body>
-	<div class="cabecera">
-		<a href="index.html", class="boton_hipodromo">Hipodromo</a>
-		
-	</div>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">HR</a>
+	    </div>
+
+	    <div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="index.html">Hipodromo</a></li>		        
+			</ul>	      
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
 
 	<div class="campo_area">
 		<div class="area_1">
@@ -38,13 +55,21 @@
 				</select>
 				
 				<p></p>
-				
+
 				<label class="prop jine">Cedula:</label>			
 				<input class="prop jine req" maxlength="8" onKeypress="if (event.keyCode < 45 || event.keyCode > 57) event.returnValue = false;" name="ci" required/>
 				<label class="prop jine">Fecha de nacimiento :</label>
 				<input class="prop jine req" type="date"  placeholder="" name="fecha" required>	
 				<label class="prop">Correo electronico</label>
 				<input class="prop req" type="email" placeholder="" name="email" required/>
+				<label class="prop">Pais:</label>
+				<input class="prop req" type="text" placeholder="Pais" name="pais" required/>
+				<label class="prop">Estado:</label>
+				<input class="prop req" type="text" placeholder="Estado" name="estado" required/>
+				<label class="prop">Municipio:</label>
+				<input class="prop req" type="text" placeholder="Municipio" name="municipio" required/>
+				<label class="prop">Parroquia:</label>
+				<input class="prop req" type="text" placeholder="Parroquia" name="parroquia" required/>
 				<label class="jine">Altura</label>
 				<input class="jine req" type="number" placeholder="metros" min="5" name="altura" required/>
 				<label class="jine checkbox-inline">
@@ -62,11 +87,6 @@
 	     	</form>
 		</div>
 	</div>
-
-	<footer class="informacion">
-		<a href="", class="info_des">Desarrolladores</a>
-		<a href="", class="info_con">Contactenos</a>
-	</footer>
 
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
