--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ejemplar <span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="Eejemplar.html">Registrar</a></li>
+	            <li><a href="Eejemplar.php">Registrar</a></li>
 	            <li><a href="#">Consultar</a></li>
 	            <li><a href="#">Modificar</a></li>
 	            <li><a href="#">Eliminar</a></li>
